# app-wycena-online-2025

./: .replit  AI_w_naszej_apce_kompletny_poradnik.txt  ARCHITECTURE-REFACTOR-2025.md  ID_AUDIT_REPORT.md  INSTRUKCJA_TERMINOLOGIA_APLIKACJI.txt  README-WYCENA2025.md  REFACTORING_GUIDE.md  REFACTOR_COMPLETE_REPORT.md  analyzer.js  app.js  app.py  appController.js  app_legacy.py  app_new_legacy.py  calculator-core.js  calculatorInit.js  cieploApiClient.js  cieploProxy.py  client.js  components.css  config.py  debug_endpoints.py  email-proxy.php  emailSender.js  errorHandling.js  formController.js  formDataProcessor.js  gen-pdf.php  gunicorn.conf.py  heat-pump-configurator.php  index.html  index_template.html  intelligentModeHandler.js  kalkulator.php  main.py  main_new_legacy.py  main_old.py  mode2Handler.js  moduleHelper.js  pdf-analyzer.js  (+25 more)
